# bus

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  clippy.toml  docker-compose.yaml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: rust.yml
bus_macros/: Cargo.toml
bus_macros/src/: bus_event_database_handler.rs  bus_event_database_pipeline.rs  bus_event_handler.rs  bus_event_pipeline.rs  bus_request_handler.rs  bus_request_pipeline.rs  lib.rs
doc/: command.md  context.md  event.md  event_database.md  event_database_pipeline.md  event_database_sea_orm.md  event_pipeline.md  query.md  request_pipeline.md
migration/: m20250508_175102_bus.rs
migrations/: mysql.sql  postgres.sql
rust_bus/: CHANGELOG.md  Cargo.toml
rust_bus/src/: bus.rs  error.rs  lib.rs
rust_bus/src/contracts/: bus_event.rs  ctx.rs  database_unique.rs  enums.rs  event_handler.rs  event_handler_database.rs  meta.rs  mod.rs
rust_bus/src/dispatch/: dispatch_db.rs  dispatch_db_sea_mysql.rs  dispatch_db_sea_postgres.rs  dispatch_db_sqlx_mysql.rs  dispatch_db_sqlx_postgres.rs  dispatch_in_memory.rs  mod.rs  registration.rs
rust_bus/src/initialization/: init_db.rs  init_memory.rs  mod.rs
rust_bus/src/models/: mod.rs  mysql_bus_jobs.rs  mysql_bus_jobs_peers.rs  pg_bus_jobs.rs  pg_bus_jobs_peers.rs  sea_orm_active_enums.rs  sea_orm_active_enums_pg.rs
rust_bus/src/sql/: dto.rs  mod.rs  sea_mysql.rs  sea_postgres.rs  sqlx_mysql.rs  sqlx_postgres.rs
rust_bus/src/tests/: base.rs  dispatch_db_sea_orm.rs  dispatch_db_sqlx.rs  mod.rs
rust_bus/src/tests/dispatch_in_memory/: mod.rs
rust_bus/src/tests/dispatch_in_memory/context/: mod.rs  no_db.rs  sea.rs  sqlx.rs
rust_bus/src/tests/dispatch_in_memory/not_context/: mod.rs  no_db.rs  sea.rs  sqlx_mysql.rs  sqlx_pg.rs
rust_bus/src/tests/workers/: mod.rs  worker_sea.rs  worker_sqlx.rs
rust_bus/src/workers/: configuration.rs  mod.rs
rust_bus/src/workers/queue/: mod.rs  update_heartbeat.rs  worker.rs
rust_bus_macros/: CHANGELOG.md  Cargo.toml
rust_bus_macros/src/: bus_event.rs  bus_event_handler.rs  bus_event_handler_database.rs  lib.rs
src/: lib.rs  registry.rs
src/core/: contracts.rs  error_bus.rs  event_handlers.rs  event_pipeline.rs  factory.rs  initialization.rs  mod.rs  registry.rs  request_handlers.rs  request_pipeline.rs
src/core/features/: mod.rs
src/core/features/sea_orm/: core.rs  db_enums.rs  dto.rs  event_database_pipeline.rs  event_handlers_database.rs  initialization.rs  mod.rs  sql_mysql.rs  sql_postgres.rs  worker_completed_tasks_handler.rs  worker_expired_tasks_handler.rs  worker_failed_tasks_handler.rs  workers.rs  workers_process.rs
