[workspace]
resolver = "2"
members = [
    "rust_bus",
    "rust_bus_macros",
]

[workspace.package]
version = "3.0.4"
edition = "2024"
rust-version = "1.75"
readme = "README.md"
license = "MIT"
authors = ["Bordunos Pavel <bordunos.p@gmail.com>"]
repository = "https://github.com/bordunosp/bus"
description = "bus — Lightweight CQRS Library for Rust"
keywords = ["bus", "CQRS", "Command", "Query", "Event"]
categories = [
    "concurrency",
    "config",
    "data-structures",
    "database",
    "web-programming"
]
